@@ -1,3 +1,7 @@
+2012-04-29  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/arm/v6t2/divrem_1.asm: New file.
+
 2012-04-28  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/thumb/add_n.asm: New file.
